# Screenshoter

./: .gitignore  CMakeLists.txt  README.md  WinSetup.iss
.github/workflows/: release.yml
scripts/: create_context_prompt.py  install.ps1  uninstall.ps1
setup/: UpdateServiceScreen.iss
sources/: steam.lnk  trust_alex.cer
src/: main.cpp
